// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Primitive interfaces combine inline styles with <Image /> component 1`] = `
<glamorous(Image)
  source="https://facebook.github.io/react/img/logo_og.png"
  style={66}
/>
`;

exports[`Primitive interfaces sanity test 1`] = `<glamorous(View) />`;

exports[`Primitive interfaces should combine with StyleSheet.create() (inline styles) 1`] = `
<glamorous(View)
  style={65}
/>
`;

exports[`Primitive interfaces should render a component with theme properties 1`] = `
.css-1fyph4i,
[data-css-1fyph4i] {
  color: red;
  padding: 10px;
}

<div
  class="css-1fyph4i rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
  dir="auto"
/>
`;

exports[`Primitive interfaces should render the Native <Image /> component 1`] = `
<glamorous(Image)
  source="https://facebook.github.io/react/img/logo_og.png"
/>
`;

exports[`with theme prop of padding 10px 1`] = `
.css-1p841yy,
[data-css-1p841yy] {
  color: red;
  padding: 10px;
}

<glamorous(Text)
  theme={
    Object {
      "padding": 10,
    }
  }
>
  <Text
    className="css-1p841yy"
  >
    <div
      className="css-1p841yy rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
      dir="auto"
    />
  </Text>
</glamorous(Text)>
`;

exports[`with theme prop of padding 20px 1`] = `
.css-1e41o48,
[data-css-1e41o48] {
  color: red;
  padding: 20px;
}

<glamorous(Text)
  theme={
    Object {
      "padding": 20,
    }
  }
>
  <Text
    className="css-1e41o48"
  >
    <div
      className="css-1e41o48 rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
      dir="auto"
    />
  </Text>
</glamorous(Text)>
`;
